Enhanced readability changing gradient, fixed alignment and aspect ratio issues with image, added rounded edges

--- a/front-end/src/components/LandingPage.css
+++ b/front-end/src/components/LandingPage.css
@@ -1,9 +1,9 @@
 .home-page{
     position: absolute;
-    top: 20;
+    top: 20px;
     left: 0;
     width: 100vw;
-    background: linear-gradient(white, #CA6267);
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(202, 98, 103, 0.1), rgba(202, 98, 103, 0.5));
     background-size: cover;
     background-position: center;
     padding: 5px;
@@ -31,7 +31,7 @@
     margin-left: 900px;
     margin-top: -300px;
     width: 800px;
-    height: 500px;
+    border-radius: 10px;
 }
 
 .heading-section2{
@@ -65,7 +65,7 @@
 
 .howitworks-section-info{
     width: 290px;
-    height: 480px;
+    height: 550px;
     background-color: white;
     padding: 1rem 2rem;
     display: flex;
@@ -82,6 +82,7 @@
 .image-info{
     width: 100px;
     height: 100px;
+    border-radius: 10px;
 }
 
 .howitworks-section-bottom h2 {
